# TCRcons

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  check_giana_data.py  generate_example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: bcubed_benchmark.py  patch_wrapper_hier.py  run_benchmark.py  run_hier_no_singletons.py
configs/: __init__.py
docs/: api.md  architecture.md  reviewer.md  reviewer.md.bak  usage.md
examples/: synthetic_labels.tsv  synthetic_tcrs.tsv
reproduce/: README.md  build_paper_benchmark_v3.py  run_full_comparison.py
requirements/: deeptcr-pinned.txt
scripts/: README.md  build_paper_benchmark_v3.py  check_faiss_seed.py  debug_deeptcr.py  debug_deeptcr2.py  debug_deeptcr3.py  deep_dive.py  deep_dive2.py  diagnose_root_cause.py  exp_shared.py  fig2_stress_test.py  fig_subset1_clusters.py  fig_subset1_vis.py  final_diagnosis.py  gen_final_figures.py  install-deeptcr-repro.sh  merge_and_visualize.py  metric_robustness.py  p0_algorithm_ablation.py  p0_background_tcr.py  p0_case_study.py  p0_cv_weights.py  p0_improved_stress.py  p0_intersection_union.py  p0_leave_one_out.py  p0_stress_test_10x.py  p0_whole_dataset.py  plot_exp4_improved.py  plot_reproducibility.py  prepare_benchmark.py  prepare_data.py  reconstruct_subsets.py  repro_test.py  reproduce_clustcr_paper.py  reproducibility.py  reproducibility_ctrl2.py  reproducibility_old.py  reproducibility_test.py  run_all_p0.sh  run_bench_exp1.py  (+33 more)
src/tcrconsensus/: __init__.py  backends.py  config.py
src/tcrconsensus/calibration/: __init__.py  calibrator.py
src/tcrconsensus/cli/: __init__.py  main.py
src/tcrconsensus/clusterers/: __init__.py  base.py  clustcr_wrapper.py  deeptcr_predictor.py  deeptcr_wrapper.py  deeptcr_wrapper.py.bak  deeptcr_wrapper.py.hier_patch  giana_wrapper.py  gliph2_wrapper.py  hd_baseline.py  levenshtein.py  tcrdist3_wrapper.py  tcrdist3_wrapper.py.bak  tcrmatch_wrapper.py
src/tcrconsensus/configs/: default.yaml
src/tcrconsensus/consensus/: __init__.py  coassociation.py  fusion.py  graph.py  modes.py  null_model.py  reweight.py  soft_cluster.py  stability.py  weights.py
src/tcrconsensus/evaluation/: __init__.py  benchmark.py  metrics.py
src/tcrconsensus/io/: __init__.py  parser.py  preprocess.py  writer.py
src/tcrconsensus/profiling/: __init__.py  profiler.py
src/tcrconsensus/refinement/: __init__.py  motif.py  refiner.py  vj_enrichment.py
src/tcrconsensus/reporting/: __init__.py  report.py
src/tcrconsensus/schema/: records.py  validation.py
src/tcrconsensus/selection/: __init__.py  selector.py  tiered.py
src/tcrconsensus/visualization/: __init__.py  visualizer.py
tests/: conftest.py  test_backend_detection.py  test_backends.py  test_cli.py  test_clusterers.py  test_config.py  test_consensus.py  test_evaluation.py  test_io.py  test_profiling.py  test_refinement.py  test_schema.py
