[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcrconsensus"
version = "1.1.1"
description = "Scenario-adaptive TCR specificity consensus clustering framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
# TODO(authorship): replace with real authors/ORCID before Zenodo deposit
authors = [{name = "TCR-Consensus Team"}]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "click>=8.0",
    "pyyaml>=6.0",
    "networkx>=2.8",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
# Opt-in clustering backends. Each pulls heavy / platform-specific dependencies,
# so none are installed by default. See README "Optional clustering backends"
# for install sources, version caveats, and the external-binary methods (clustcr,
# GLIPH2, GIANA, TCRMatch) which CANNOT be pip-installed and must be configured
# manually via the TCR_*_LIB / TCR_*_SCRIPT / TCR_*_BIN environment variables.
tcrdist3 = ["tcrdist3>=0.3"]
# DeepTCR is installed from its GitHub SOURCE, not the PyPI sdist. The published
# sdist's setup.py probes `nvidia-smi` during build, so `pip install DeepTCR`
# from PyPI raises FileNotFoundError on any host without an NVIDIA driver. The
# GitHub master setup.py has no such probe, so the git URL installs cleanly on
# CPU/non-CUDA hosts too. DeepTCR pins its OWN stack via requirements.txt
# (tensorflow==2.12.0 on Linux; its requirements-macos.txt is empty), so this
# extra does NOT re-pin TensorFlow — doing so would conflict with DeepTCR's own
# tensorflow pin and make the extra unresolvable on Linux. On macOS, add
# TensorFlow yourself to run DeepTCR on CPU (e.g. `uv pip install tensorflow`).
deeptcr = ["DeepTCR @ git+https://github.com/sidhomj/DeepTCR.git"]
# Umbrella: every backend that installs cleanly via pip. clustcr is intentionally
# excluded — it pins scipy==1.8 in its setup.py, which conflicts with this
# package's scipy>=1.9; install clustcr manually (see README). GLIPH2 / GIANA /
# TCRMatch are external binaries, also manual.
clusterers = ["tcrdist3>=0.3", "DeepTCR @ git+https://github.com/sidhomj/DeepTCR.git"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
    "ruff>=0.1",
]

[project.scripts]
tcrconsensus = "tcrconsensus.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Orillas/TCRcons"
Repository = "https://github.com/Orillas/TCRcons"
Issues = "https://github.com/Orillas/TCRcons/issues"
# DOI backfilled here after Zenodo deposit

[tool.hatch.build.targets.wheel]
packages = ["src/tcrconsensus"]

[tool.hatch.metadata]
# the [deeptcr] / [clusterers] extras reference DeepTCR by git URL (the PyPI
# sdist's build probes nvidia-smi); hatchling needs this to accept direct refs.
allow-direct-references = true

[tool.hatch.build]
# defense-in-depth: keep backups/caches/dead-filetypes out of sdist + wheel
# even if re-introduced into the tree
exclude = [
    "**/__pycache__",
    "**/_tier*_backup_*",
    "**/_tier*_backup_path.txt",
    "**/*_backup_*",
    "**/*.bak",
    "**/*.patch",
    "**/*.orig",
    "**/*.hier_patch",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
