[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcrconsensus"
version = "1.1.1"
description = "Scenario-adaptive TCR specificity consensus clustering framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
# TODO(authorship): replace with real authors/ORCID before Zenodo deposit
authors = [{name = "TCR-Consensus Team"}]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "click>=8.0",
    "pyyaml>=6.0",
    "networkx>=2.8",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
# Opt-in clustering backends. Each pulls heavy / platform-specific dependencies,
# so none are installed by default. See README "Optional clustering backends"
# for install sources, version caveats, and the external-binary methods (clustcr,
# GLIPH2, GIANA, TCRMatch) which CANNOT be pip-installed and must be configured
# manually via the TCR_*_LIB / TCR_*_SCRIPT / TCR_*_BIN environment variables.
tcrdist3 = ["tcrdist3>=0.3"]
# DeepTCR is installed from its GitHub SOURCE, not the PyPI sdist. The published
# sdist's setup.py probes `nvidia-smi` during build, so `pip install DeepTCR`
# from PyPI raises FileNotFoundError on any host without an NVIDIA driver. The
# GitHub master setup.py has no such probe, so the git URL installs cleanly on
# CPU/non-CUDA hosts too.
#
# DeepTCR's own requirements.txt pins specific versions (Linux):
#   tensorflow==2.12.0   numpy==1.23.5   scipy==1.10.1
#   scikit-learn==1.2.2  pandas==1.5.3   keras==2.12.0
#   matplotlib==3.7.2    seaborn==0.12.2  umap-learn==0.5.5  h5py==3.8.0
# (requirements-macos.txt is empty — macOS users add TF themselves).
#
# !! Version conflict with DeepTCR's hard pins !!
# DeepTCR's setup.py declares tensorflow==2.12.0 / keras==2.12.0 via
# install_requires. If you need different versions (e.g. TF 2.15.1),
# install DeepTCR WITH --no-deps and pin manually:
#   pip install --no-deps ".[deeptcr]"
#   pip install -r requirements/deeptcr-pinned.txt
#
# Pinned to commit 3930ca0 (= DeepTCR v2.1.29, verified working 2026-06-30).
deeptcr = ["DeepTCR @ git+https://github.com/sidhomj/DeepTCR.git@3930ca05a987c7cc621b4f2ecfd740e2d62799d8"]
# Umbrella: every backend that installs cleanly via pip. clustcr is intentionally
# excluded — it pins scipy==1.8 in its setup.py, which conflicts with this
# package's scipy>=1.9; install clustcr manually (see README). GLIPH2 / GIANA /
# TCRMatch are external binaries, also manual.
clusterers = ["tcrdist3>=0.3", "DeepTCR @ git+https://github.com/sidhomj/DeepTCR.git@3930ca05a987c7cc621b4f2ecfd740e2d62799d8"]
# For pinned DeepTCR dependencies matching the verified .venv, see
# requirements/deeptcr-pinned.txt and the --no-deps install workflow.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
    "ruff>=0.1",
]

[project.scripts]
tcrconsensus = "tcrconsensus.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Orillas/TCRcons"
Repository = "https://github.com/Orillas/TCRcons"
Issues = "https://github.com/Orillas/TCRcons/issues"
# DOI backfilled here after Zenodo deposit

[tool.hatch.build.targets.wheel]
packages = ["src/tcrconsensus"]

[tool.hatch.metadata]
# the [deeptcr] / [clusterers] extras reference DeepTCR by git URL (the PyPI
# sdist's build probes nvidia-smi); hatchling needs this to accept direct refs.
allow-direct-references = true

[tool.hatch.build]
# defense-in-depth: keep backups/caches/dead-filetypes out of sdist + wheel
# even if re-introduced into the tree
exclude = [
    "**/__pycache__",
    "**/_tier*_backup_*",
    "**/_tier*_backup_path.txt",
    "**/*_backup_*",
    "**/*.bak",
    "**/*.patch",
    "**/*.orig",
    "**/*.hier_patch",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
